13Jun06=======================================================================
1. start using git.
2. change all the version / build numbering.
14Jun07=======================================================================
1. prepare for git repository and moving of anon cvs repository to
scm.tobit.co.uk.
11Jun07=======================================================================
1. Change the frequency normalisation for DX Spot dupe checks so that any
decimal part is thrown away (in other words: truncate the freq to integer khz)
20May07=======================================================================
1. add 1704 cty.dat
08Apr07=======================================================================
1. add CTY-1703 cty.dat
2. alter the way the dupefile deletion is done.
18Mar07=======================================================================
1. change URL in show/425.
04Mar07=======================================================================
1. add CTY 1702 prefix data files
22Feb07=======================================================================
1. add show/myfdx to Aliases.
15Feb07=======================================================================
1. allow convkeps.pl to parse NORAD keps files.
22Jan07=======================================================================
1. disable default propagation of PC9x sentences
2. simplify PC17 handling
16Jan07=======================================================================
1. back ported a change to PC16 handling so that a locally connected node's
info clears out and generally overrides any residual PC16 info gathered from
elsewhere.
15Jan07=======================================================================
1. added CTY-1701
07Jan07=======================================================================
1. use IO::Socket blocking where available and switch off or ignore all
attempts to block.
05Jan07=======================================================================